# designbuilder_schema

./: .gitignore  README.md  pyproject.toml  simple_data.json
apps/debugging_dashboard/: README.md
apps/graph_ql/: app.py  attributes.py  core.py  geometry.py  tables.py  task1.py  task2.py  task3.py
apps/honeybee_to_designbuilder/: HB Shoebox.json  HB Shoebox.xml  hbjson_to_dbxml_writer.py  honeybee_shoebox.gh
apps/reporting/: README.md
designbuilder_schema/: attributes.py  base.py  cli.py  core.py  example1.py  flatten.py  geometry.py  hvac_components.py  hvac_network.py  hvac_unit_components.py  hvac_zone_components.py  id.py  tables.py  tables.pyi  test_validate_core.py  test_validate_hvac_components.py  utils.py  vis_hvac_network_converter.py  vis_small_hvac_network.py  visualise.py
designbuilder_schema/hvac/: components.py  network.py  unit_components.py  zone_components.py
designbuilder_schema/tests/: test_core.py  test_debug.py  test_geometry.py  test_hvac_components.py  test_id.py  test_utils.py  test_validate_core.py  test_validate_hvac_components.py
docs/: conf.py  index.rst
examples/: MadeByPydantic 1.dsb  MadeByPydantic 2.dsb  MadeByPydantic.json  MadeByPydantic.xml  SmallestDSB.json  SmallestDSB.xml  access point.py  access_point.py  buildingblock body volume.py  buildingblock_body_volume.py  edit zone adu coil attributes.py  edit_zone_adu_coil_attributes.py  get zone name and floor polygon.py  get_buildingblock_body.py  get_hvac_component_attributes.py  get_hvac_component_types.py  get_version.py  hvac component types.py  hvac unit component types.py  hvac zone component types.py  hvac_component_types.py  hvac_unit_component_types.py  hvac_zone_component_types.py  load and save.py  new_file_using_pydantic.json  new_file_using_pydantic.xml  playground.py  pydantic.json  pydantic.xml  site handle.py  small writer.py  smallest dsbXML.py  table_dataframe.py  table_dataframe_access.py  table_item_acess.py  test_vis.py  version.py  visualise.py  visualise_building.py  ~MadeByPydantic 2.dsb.lck
extensions/dataframe/: table_dataframe_access.py
extensions/visualise/: building.py  example vis building.py  visualise_extension.py
graph_ql/: app.py  attributes.py  core.py  id.py  main.py  task2.py  task3.py
hbjson_to_dbjson/: hbjson_to_dbxml_writer.py  json_improve_indent.py  revit_sample_model.hbjson
honeybee_to_designbuilder/: HB Shoebox.xml  Shoebox10x10-MINIMALISTIC.xml  hbjson_to_dbxml_writer.py  small_honeybee.py
samples/fragments/: DemandSubLoop_HVACComponents.json  HVACComponent-Air handling unit.json  HVACComponent-Setpoint manager.json  HVACComponent-Sub-loop node.json  HVACComponent-Zone mixer.json  (+4 more)
scripts/: DesignBuilder.xsd  autogenerated.py  gen_boilerplate_pydantic_code.py  gen_boilerplate_strawberry_code.py  gen_stub_files.py  generate_boilerplate_pydantic_code.py  generate_stub_files.py  report_hvac_component_coverage.py
table_extension/: table_dataframe_access.py  table_extension.py
visualise/: visualise_building.py
visualise_extension/: visualise_building.py
(+33 files in other folders)
