[project]
name = "designbuilder_schema"
version = "0.6"
description = "Python package for DesignBuilder XML files with read / edit / write functionality."
authors = [
    { name = "Bartlomiej Tokarzewski", email = "bartlomiej.tokarzewski@gmail.com" },
]
dependencies = ["pydantic", "xmltodict", "fire"]

readme = "README.md"
#license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/tokarzewski/designbuilder_schema"
"Bug Tracker" = "https://github.com/tokarzewski/designbuilder_schema/issues"

[tool.setuptools]
packages = ["designbuilder_schema", "designbuilder_schema.hvac"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "xmlschema"]

[tool.pytest.ini_options]
pythonpath = ["C:/GitHub/designbuilder_schema"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["designbuilder_schema"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "docs", "build", "dist"]

[tool.black]
line-length = 88
